--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 
 <body>
-
+    <section class="flexible-container">
+        <div class="half-width order-food-info">
+            <h1>
+                <span class="orange-color">Skip</span> The Diet,
+                <br> Just Eat Healthy
+                <br>With Food Network
+            </h1>
+            <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
+            <a href="#" class="linked-button">Order Food</a>
+        </div>
+        <div class="half-width order-food-guy">
+            <img src="images/male/Group 8448.png" alt="young-guy">
+        </div>
+    </section>
 </body>
 
 </html>
