second part added

--- a/index.html
+++ b/index.html
@@ -29,6 +29,20 @@
             <img src="images/male/Group 8448.png" alt="young-guy">
         </div>
     </section>
+    <section class="flexible-container eat-healthy-food-bg">
+        <div class="half-width eat-healthy-food">
+            <img src="images/female/eat-healthy-food.png" alt="eat-healthy-food">
+        </div>
+        <div class="half-width about-me-info">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing
+                elit. Condimentum diam orci pretium a pharetra,
+                feugiat cursus. Dictumst risus, sem egestas odio cras
+                adipiscing vulputate. Nisi, risus in suscipit non. Non
+                commodo volutpat, pharetra, vel.</p>
+            <a href="#" class="linked-button">Contact me</a>
+        </div>
+    </section>
 </body>
 
 </html>
