--- a/index.html
+++ b/index.html
@@ -43,6 +43,42 @@
             <a href="#" class="linked-button">Contact me</a>
         </div>
     </section>
+    <section>
+        <h2>My recipies</h2>
+        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            Lorem Ipsum has been the industry's standard dummy text ever since the
+            1500s</p>
+        <div class="flexible-container mb-100">
+            <div class="half-width single-recipie">
+                <img src="images/food/project-cover1.jpg" alt="project-cover1">
+                <h3>Recipie Title</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+            <div class="half-width single-recipie no-margin">
+                <img src="images/food/project-cover1.jpg" alt="project-cover1">
+                <h3>Recipie Title</h3>
+                <p>Lorem Ipsum is simply dummy text of the printing and
+                    typesetting industry. Lorem Ipsum has been the industry's
+                    standard dummy text ever since the 1500s.</p>
+            </div>
+        </div>
+        <div class="flexible-container social-media">
+            <div class="half-width single-media">
+                <h3>700k</h3>
+                <p>Youtube Subscribers</p>
+            </div>
+            <div class="half-width single-media">
+                <h3>2.4m</h3>
+                <p>Instagram Followers</p>
+            </div>
+            <div class="half-width single-media">
+                <h3>100k</h3>
+                <p>Dribbble Shot Likes</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
