footer part added

--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
             </div>
         </div>
     </section>
+    <footer class="footer-info">
+        <h3><span class="orange-color">Eat</span> Fresh</h3>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 
 </html>
