--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="flexible-container">
+    <section class="flexible-container mb-70">
         <div class="half-width order-food-info">
             <h1>
                 <span class="orange-color">Skip</span> The Diet,
@@ -25,8 +25,8 @@
             <p>Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
             <a href="#" class="linked-button">Order Food</a>
         </div>
-        <div class="half-width order-food-guy">
-            <img src="images/male/Group 8448.png" alt="young-guy">
+        <div class="half-width order-food-lady">
+            <img src="images/female/Group8425.png" alt="young-guy">
         </div>
     </section>
     <section class="flexible-container eat-healthy-food-bg">
@@ -44,10 +44,12 @@
         </div>
     </section>
     <section>
-        <h2>My recipies</h2>
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-            Lorem Ipsum has been the industry's standard dummy text ever since the
-            1500s</p>
+        <div class="text-center recipies">
+            <h2>My recipies</h2>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                Lorem Ipsum has been the industry's standard dummy text ever since the
+                1500s</p>
+        </div>
         <div class="flexible-container mb-100">
             <div class="half-width single-recipie">
                 <img src="images/food/project-cover1.jpg" alt="project-cover1">
